@@ -840,6 +840,7 @@ INPUT                  = @srcdir@/doc/doxygen/doxygroups.cc \
                          include/sstream \
                          include/stack \
                          include/stdexcept \
+                         include/stop_token \
                          include/streambuf \
                          include/string \
                          include/string_view \
